# llm-zoomcamp-2026-code

llm-zoomcamp-2026-assignment1/: .gitignore  pyproject.toml
llm-zoomcamp-2026-assignment1/01-agentic-rag/lessons/: agentic-loop.ipynb  notebook_exercises.ipynb  persinsent_rag.ipynb  rag_revision.ipynb
llm-zoomcamp-2026-assignments/: .gitignore  pyproject.toml
llm-zoomcamp-2026-assignments/01-agentic-rag/homework/: homework_1.ipynb
llm-zoomcamp-2026-assignments/01-agentic-rag/lessons/: 08-rag-helper.ipynb  agents.ipynb  sqlite-ingest.ipynb  toyaikit.ipynb
llm-zoomcamp-2026-assignments/02-vector-search/: embeddings.ipynb  pgvector.ipynb  rag_helper.py  rag_vector.ipynb  sqlitesearch_newsession.ipynb
llm-zoomcamp-2026-assignments/04-evaluation/: homework.py
llm-zoomcamp-2026-assignments/05-monitoring/: homework.py  traces.db
llm-zoomcamp-2026-assignments/dlt-workshop/: agent.py  logfire_pipeline.py  q1_logfire_trace.py  q3_token_usage.py
