[project]
name = "llm-zoomcamp-2026-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dlt[duckdb]>=1.29.0",
    "gitsource>=0.0.5",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "logfire>=3.5.1",
    "minsearch>=0.1.0",
    "openai>=2.41.1",
    "opentelemetry-api>=1.39.0,<1.44.0",
    "opentelemetry-sdk>=1.39.0,<1.44.0",
    "pandas>=3.0.3",
    "psycopg[binary]>=3.3.4",
    "pydantic-ai>=2.13.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
    "sqlitesearch>=0.1.1",
    "toyaikit>=0.0.11",
]
